1.5/src/deployment-nginx-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-front
  labels:
    app: nginx-front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-front
  template:
    metadata:
      labels:
        app: nginx-front
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-front-svc
spec:
  ports:
    - name: http-port
      port: 80
  selector:
    app: nginx-front
