1.5/src/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysvc
spec:
  ports:
    - name: nginx-front-svc
      port: 80
  selector:
    app: nginx-front

---
apiVersion: v1
kind: Service
metadata:
  name: mysvc
spec:
  ports:
    - name: mtools-svc-back
      port: 80
  selector:
    app: multitool-back
