1.5/src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lab.roznanie.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-front-svc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: multitool-back-svc
            port:
              number: 80
            
  ingressClassName: nginx
